Made list header and tab color match; fix alignments
 - The ClickList header and inactive tabber tabs now have *almost*
   the same color. The ClickList header is slightly darker, to make
   the header text more readable.

 - The "This course doesn't have any sections yet" message now
   aligns with the short course description

--- a/static/css/clicklist.css
+++ b/static/css/clicklist.css
@@ -30,8 +30,9 @@
 }
 
 .clicklist-header {
-    background-color: gray;
+    background-color: #999;
     color: white;
+    font-weight: normal;
 
     padding: 2px 4px 2px 4px;
 }
