--- a/static/css/tabber.css
+++ b/static/css/tabber.css
@@ -1,11 +1,12 @@
 
 ul.tabbernav {
     padding-left: 16px;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid #bbb;
+    padding-top: 8px;
 }
 
 ul.tabbernav > li {
-    border: 1px solid #ddd;
+    border: 1px solid #bbb;
     border-bottom: none;
     display: inline;
     margin-right: 8px;
@@ -16,7 +17,7 @@ ul.tabbernav > li {
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;*/
 
-    background-color: #ddd;
+    background-color: #bbb;
 }
 
 ul.tabbernav > li.tabberactive {
